# nearPOC

IntellexStorage/: Cargo.toml
IntellexStorage/src/: lib.rs
